# JJCustumorObtain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
memory/: -round-1.md  -round-2.md  round_counters.json
memory/business/: business-round-1.md
memory/companies/: companies-round-1.md  companies-round-10.md  companies-round-11.md  companies-round-12.md  companies-round-13.md  companies-round-14.md  companies-round-15.md  companies-round-16.md  companies-round-17.md  companies-round-18.md  companies-round-19.md  companies-round-2.md  companies-round-20.md  companies-round-21.md  companies-round-22.md  companies-round-23.md  companies-round-24.md  companies-round-3.md  companies-round-4.md  companies-round-5.md  companies-round-6.md  companies-round-7.md  companies-round-8.md  companies-round-9.md
memory/guidelines/: guidelines-round-1.md  guidelines-round-2.md  guidelines-round-3.md  guidelines-round-4.md  guidelines-round-5.md  guidelines-round-6.md
memory/index_chroma/: chroma.sqlite3  index_chroma-round-1.md  index_chroma-round-2.md  index_chroma-round-3.md  index_chroma-round-4.md
memory/industry/: industry-round-1.md  industry-round-2.md
memory/marketplace/: marketplace-round-1.md
memory/search/: search-round-1.md  search-round-10.md  search-round-11.md  search-round-12.md  search-round-13.md  search-round-14.md  (+14 more)
output/: contact_discovery_report.md  contact_discovery_result.json  d984807c-d004-4859-9b84-26f0fc5d0e9c_contact_discovery_report.md  d984807c-d004-4859-9b84-26f0fc5d0e9c_contact_discovery_result.json
(+69 files in other folders)
