[project]
name = "cobtainflow"
version = "0.1.0"
description = "CObtainFlow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2",
    "tavily-python>=0.7.23",
]

[project.scripts]
kickoff = "cobtainflow.main:kickoff"
run_crew = "cobtainflow.main:kickoff"
plot = "cobtainflow.main:plot"
run_with_trigger = "cobtainflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
